--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@gridsome/remark-prismjs": "^0.0.4",
     "@gridsome/source-filesystem": "0.3.0",
     "@gridsome/transformer-remark": "0.2.0",
+    "axios": "^0.18.0",
     "gridsome": "^0.5.0",
     "striptags": "^3.1.1"
   }
