--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "lambda:build": "netlify-lambda build functions-src",
+    "lambda:serve": "netlify-lambda serve functions-src"
   },
   "dependencies": {
     "@gridsome/remark-prismjs": "^0.0.4",
@@ -13,5 +15,9 @@
     "axios": "^0.18.0",
     "gridsome": "^0.5.0",
     "striptags": "^3.1.1"
+  },
+  "devDependencies": {
+    "netlify-lambda": "^1.1.1",
+    "@sendgrid/mail": "^6.3.1"
   }
 }
