--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "striptags": "^3.1.1"
   },
   "devDependencies": {
-    "netlify-lambda": "^1.1.1",
-    "@sendgrid/mail": "^6.3.1"
+    "@sendgrid/mail": "^6.3.1",
+    "netlify-lambda": "^1.1.1"
   }
 }
