--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lambda:serve": "netlify-lambda serve functions-src"
   },
   "dependencies": {
-    "@gridsome/remark-prismjs": "^0.0.4",
     "@gridsome/source-filesystem": "0.3.0",
     "@gridsome/transformer-remark": "0.2.0",
     "axios": "^0.18.0",
     "gridsome": "^0.5.0",
+    "gridsome-plugin-remark-shiki": "^0.2.0",
     "striptags": "^3.1.1"
   },
   "devDependencies": {
