--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@gridsome/source-filesystem": "0.3.0",
     "@gridsome/transformer-remark": "0.2.0",
     "axios": "^0.18.0",
-    "gridsome": "^0.5.0",
+    "gridsome": "0.5.7",
     "gridsome-plugin-remark-shiki": "^0.2.0",
     "striptags": "^3.1.1"
   },
